Fixed spacing on mobile for banner items

--- a/src/frontend/styles/index.css
+++ b/src/frontend/styles/index.css
@@ -170,6 +170,7 @@ footer a{
     .overlay-content li {
         font-size: 14px;
         display: inline;
+        margin: 12px;
     }
     .link-area {
         flex-direction: column;
